--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,5 @@ Temp
 *.unityproj
 *.sln
 *.userprefs
+Library/metadata/00/0000000000000000c000000000000000
+Library/metadata/00/0000000000000000c000000000000000
